--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AC CSPF Ratings Heatmap</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300;400;700&family=Noto+Color+Emoji&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Noto+Color+Emoji&display=swap" rel="stylesheet">
     <style>
-        
         body {
-            font-family: 'Noto Sans', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: #f0f4f8;
             margin: 0;
             padding: 20px;
@@ -21,30 +20,38 @@
         #container {
             background-color: white;
             border-radius: 12px;
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-            padding: 30px;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+            padding: 40px;
             max-width: 100%;
             overflow-x: auto;
+            transition: all 0.3s ease;
+        }
+        #container:hover {
+            box-shadow: 0 15px 40px rgba(0, 0, 0, 0.15);
         }
         #heatmap {
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
         .cell-text {
-            font-size: 13px;
+            font-size: 12px;
             font-weight: 400;
+            transition: all 0.3s ease;
+        }
+        .cell-text:hover {
+            font-weight: 700;
         }
         .axis-label {
             font-size: 18px;
             font-weight: 700;
-            fill: #555;
+            fill: #444;
         }
         .title {
-            font-size: 32px;
+            font-size: 36px;
             font-weight: 700;
-            fill: #333;
+            fill: #222;
         }
         .subtitle {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: 400;
             fill: #666;
         }
@@ -58,7 +65,7 @@
         .legend-title {
             font-size: 16px;
             font-weight: 700;
-            fill: #555;
+            fill: #444;
         }
         .star {
             fill: #003366;
@@ -67,30 +74,39 @@
             font-family: 'Noto Color Emoji', sans-serif;
         }
         #notes {
-            border-top: 1px solid #ddd;
-            padding-top: 20px;
-            margin-top: 20px;
+            border-top: 1px solid #eee;
+            padding-top: 30px;
+            margin-top: 30px;
             font-size: 14px;
             color: #666;
             width: 100%;
             box-sizing: border-box;
+            line-height: 1.6;
         }
         #notes h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-            color: #555;
+            font-size: 20px;
+            margin-bottom: 15px;
+            color: #444;
         }
         #notes ol {
-            padding-left: 20px;
+            padding-left: 25px;
             margin: 0;
         }
         #notes li {
-            margin-bottom: 10px;
-            line-height: 1.4;
+            margin-bottom: 15px;
         }
         #notes .sub-list {
-            margin-top: 5px;
+            margin-top: 10px;
             padding-left: 20px;
+        }
+        #notes a {
+            color: #0066cc;
+            text-decoration: none;
+            transition: all 0.3s ease;
+        }
+        #notes a:hover {
+            color: #004499;
+            text-decoration: underline;
         }
     </style>
 </head>
@@ -118,8 +134,8 @@
     <script>
         // Set up dimensions
         const margin = {top: 120, right: 150, bottom: 120, left: 320};
-        const width = Math.min(1400, window.innerWidth - 40) - margin.left - margin.right;
-        const height = 1200 - margin.top - margin.bottom;
+        const width = Math.min(1300, window.innerWidth - 40) - margin.left - margin.right;
+        const height = 1100 - margin.top - margin.bottom;
 
         // Create SVG
         const svg = d3.select("#heatmap")
@@ -169,12 +185,12 @@
             const x = d3.scaleBand()
                 .range([0, width])
                 .domain(starColumns)
-                .padding(0.05);
+                .padding(0.08);
 
             const y = d3.scaleBand()
                 .range([0, height])
                 .domain(processedData.map(d => d.rowLabel))
-                .padding(0.1);
+                .padding(0.12);
 
             // Updated color scale with higher contrast
             const color = d3.scaleSequential(t => d3.interpolateRgb("#e6f3ff", "#003366")(t * t))
@@ -218,7 +234,11 @@
                 .attr("height", y.bandwidth())
                 .style("fill", d => isNaN(d.value.avg) ? "#f0f0f0" : color(d.value.avg))
                 .style("stroke", "#fff")
-                .style("stroke-width", 1);
+                .style("stroke-width", 1)
+                .style("opacity", 0)
+                .transition()
+                .duration(1000)
+                .style("opacity", 1);
 
             // Add text to cells
             svg.selectAll()
@@ -243,7 +263,12 @@
                     if (isNaN(d.value.avg)) return "#999";
                     const brightness = d3.lab(color(d.value.avg)).l;
                     return brightness > 50 ? "#333" : "#fff";
-                });
+                })
+                .style("opacity", 0)
+                .transition()
+                .duration(1000)
+                .delay((d, i) => i * 50)
+                .style("opacity", 1);
 
             // Add title
             svg.append("text")
@@ -251,7 +276,11 @@
                 .attr("y", -margin.top / 2 - 20)
                 .attr("text-anchor", "middle")
                 .attr("class", "title")
-                .text("AC CSPF Ratings by Country, Type, and Capacity Range");
+                .text("AC CSPF Ratings by Country, Type, and Capacity Range")
+                .style("opacity", 0)
+                .transition()
+                .duration(1000)
+                .style("opacity", 1);
 
             // Add subtitle
             svg.append("text")
@@ -259,7 +288,12 @@
                 .attr("y", -margin.top / 2 + 20)
                 .attr("text-anchor", "middle")
                 .attr("class", "subtitle")
-                .text("Comparison of energy efficiency standards across Southeast Asian countries");
+                .text("Comparison of energy efficiency standards across Southeast Asian countries")
+                .style("opacity", 0)
+                .transition()
+                .duration(1000)
+                .delay(500)
+                .style("opacity", 1);
 
             // Add X axis label
             svg.append("text")
@@ -303,7 +337,12 @@
                 .attr("y", d => d)
                 .attr("width", legendWidth)
                 .attr("height", 1)
-                .style("fill", d => color(legendScale.invert(d)));
+                .style("fill", d => color(legendScale.invert(d)))
+                .style("opacity", 0)
+                .transition()
+                .duration(1000)
+                .delay((d, i) => i * 2)
+                .style("opacity", 1);
 
             const legendAxis = d3.axisRight(legendScale)
                 .ticks(5)
@@ -314,13 +353,17 @@
                 .attr("transform", `translate(${legendWidth}, 0)`)
                 .call(legendAxis);
 
+            // Add CSPF label at the bottom of the color legend
             legend.append("text")
-                .attr("transform", "rotate(90)")
-                .attr("x", legendHeight / 2)
-                .attr("y", -legendWidth - 45)
+                .attr("x", legendWidth / 2)
+                .attr("y", legendHeight + 30)
                 .attr("text-anchor", "middle")
                 .attr("class", "legend-title")
-                .text("CSPF");
+                .text("CSPF")
+                .style("opacity", 0)
+                .transition()
+                .duration(1000)
+                .style("opacity", 1);
         });
     </script>
 </body>
